--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <ul>
         <li>eng</li>
         <li>Documentation / Who's using</li>
-        <li><img src="./img/" alt="company logo" /></li>
+        <li><img src="./img/company-logo-black.svg" alt="company logo" /></li>
       </ul>
     </header>
 
