add final changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <header>
         <ul>
-          <li>eng</li>
+          <li>ENG</li>
           <li>Documentation / Who's using</li>
           <li><img src="./img/company-logo-black.svg" alt="company logo" /></li>
         </ul>
@@ -67,7 +67,7 @@
             learn even more. Because JSX is JavaScript, you can use variables
             inside it. Here you are declaring a <span>name</span> for the cat,
             name, and embedding it with curly braces inside
-            <span> &lt;Text\&gt;</span>
+            <span>&lt;Text\&gt;</span>
           </p>
           <p><b>+ props.</b> Props is short for “properties”.</p>
           <p>
@@ -91,7 +91,7 @@
             For example, let's say that as the user types, you're translating
             their words into a different language. In this new language, every
             single word is written the same way: &#127829;. So the sentence
-            "Hello there Bob" would be translated as " &#127829; &#127829;".
+            "Hello there Bob" would be translated as "&#127829; &#127829;".
           </p>
         </article>
       </section>
